--- a/POS/server/tsconfig.json
+++ b/POS/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "target": "ES2020",
-    "lib": ["ES2021"],
+    "target": "ESNext",
+    "lib": ["ESNext"],
 
     /* Module System (ESM with Node) */
     "module": "nodenext",
