Implement error handler.

--- a/POS/server/tsconfig.json
+++ b/POS/server/tsconfig.json
@@ -2,25 +2,23 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ESNext",
-    "lib": ["ESNext"],
-
+    "lib": [
+      "ESNext"
+    ],
     /* Module System (ESM with Node) */
     "module": "nodenext",
     "moduleResolution": "NodeNext",
     "moduleDetection": "force",
-
     /* Node + ESM support */
     // "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-
     /* Output */
     "outDir": "dist",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-
     /* Strictness */
     "strict": true,
     "noImplicitReturns": true,
@@ -29,7 +27,11 @@
     "exactOptionalPropertyTypes": true,
     "skipLibCheck": true
   },
-
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
