--- a/POS/server/package.json
+++ b/POS/server/package.json
@@ -9,16 +9,27 @@
     "dev": "tsx watch src/index.ts",
     "build": "rimraf dist && tsc"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "Wai Hlyan Phyo",
   "license": "ISC",
-  "packageManager": "pnpm@10.23.0",
+  "packageManager": "pnpm@10.24.0",
   "dependencies": {
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "morgan": "^1.10.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/express-rate-limit": "^6.0.2",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
+    "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
     "rimraf": "^6.1.2",
