--- a/POS/server/package.json
+++ b/POS/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc",
+    "generate": "pnpm prisma generate --schema=database/prisma/mongo/schema.prisma && pnpm prisma generate --schema=database/prisma/mysql/schema.prisma"
   },
   "keywords": [],
   "author": "Wai Hlyan Phyo",
