--- a/POS/server/package.json
+++ b/POS/server/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.24.0",
   "dependencies": {
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^3.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -33,7 +34,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
-    "prisma": "^7.1.0",
+    "prisma": "^6.19.0",
     "rimraf": "^6.1.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
